Making webp images for sliders and others for optimization

--- a/join/home/templates/home/home.html
+++ b/join/home/templates/home/home.html
@@ -3,7 +3,7 @@
 {% load static i18n %}
 {% block content %}
   <!--Section 1: Features-->
-  {% include "partials/slider.html" %}
+  {% include "partials/slider2.html" %}
   <div class="clearfix"></div>
 
   <!--Section 2: People -->
