--- a/join/home/templates/partials/about.html
+++ b/join/home/templates/partials/about.html
@@ -1,4 +1,4 @@
-{% load i18n static %}
+{% load i18n static webp_converter %}
 <section class="sec-padding-4 section-primary">
 </section>
 <div class="clearfix"></div>
@@ -7,7 +7,7 @@
 <div class="sec-padding section-dark">
   <div class="container">
     <div class="row">
-      <div class=" col-md-12 col-centered text-center"> <img src="{% static "images/logo/logo-join.png" %}" alt=""/>
+      <div class=" col-md-12 col-centered text-center"> <img src="{% static_webp "images/logo/logo-join.png" %}" alt=""/>
         <div class="clearfix"></div>
         <ul class="footer-quick-links">
           <li><a href="#">Home</a></li>
