--- a/join/home/templates/partials/community.html
+++ b/join/home/templates/partials/community.html
@@ -1,4 +1,4 @@
-{% load i18n static %}
+{% load i18n static webp_converter %}
 <section class="section-side-image sec-bpadding-2 clearfix">
   <div class="img-holder col-md-12 col-sm-3 pull-left">
     <div class="background-imgholder" style="background:url(http://via.placeholder.com/1500x960);"><img alt="" class="nodisplay-image" src="http://via.placeholder.com/1500x960"> </img></div>
