--- a/join/home/templates/partials/fans.html
+++ b/join/home/templates/partials/fans.html
@@ -1,4 +1,4 @@
-{% load i18n static core_tags thumbnail %}
+{% load i18n static core_tags thumbnail webp_converter %}
 <section class="section-side-image section-dark sec-padding-5 clearfix">
   <div class="img-holder col-md-12 col-sm-3 pull-left">
     {% get_image_by_slug "news-background" as news_background %}
