--- a/join/home/templates/partials/opinions.html
+++ b/join/home/templates/partials/opinions.html
@@ -1,4 +1,4 @@
-{% load i18n static %}
+{% load i18n static webp_converter %}
 <div class="parallax vertical-align" data-parallax-bg-image="http://via.placeholder.com/2000x1300" data-parallax-direction="down" data-parallax-speed="0.9">
   <div class="parallax-overlay bg-opacity-9">
     <div class="container sec-tpadding-2 sec-bpadding-2">
