--- a/join/home/templates/partials/people.html
+++ b/join/home/templates/partials/people.html
@@ -1,4 +1,4 @@
-{% load i18n static thumbnail core_tags %}
+{% load i18n static thumbnail core_tags webp_converter %}
 <section id="people-block" class="section-light">
   <div class="container-fluid" style="padding-left: 0px; padding-right: 0px">
     {% get_image_by_slug "users-background" as userbackground %}
