--- a/join/home/templates/partials/projects.html
+++ b/join/home/templates/partials/projects.html
@@ -1,11 +1,11 @@
-{% load thumbnail %}
+{% load thumbnail webp_converter %}
 <section class="sec-padding" style="padding: 40px 0 40px 0">
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
         <div class="sec-title-container text-center less-padding-4">
           <h2 class="font-weight-6 less-mar-1 line-height-5 text-primary montserrat">PROYECTOS QUE INSPIRAN</h2>
-          <h4 class="font-weight-3 less-mar-1 montserrat line-height-3">PROPONE TU IDEA Y CREA UN PROYECTO EN CONJUNTO</h3>
+          <h4 class="font-weight-3 less-mar-1 montserrat line-height-3">PROPONE TU IDEA Y CREA UN PROYECTO EN CONJUNTO</h4>
           <h4 class="font-weight-3 less-mar-1 montserrat line-height-3">CON OTROS DISEÑADORES.<br/></h4>
         </div>
       </div>
