--- a/join/home/templates/partials/services.html
+++ b/join/home/templates/partials/services.html
@@ -1,4 +1,4 @@
-{% load i18n static %}
+{% load i18n static webp_converter %}
 <section>
         <div class="videobgholder">
           <div id="wrapper">
