--- a/join/project/templates/project/add.html
+++ b/join/project/templates/project/add.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load core_tags %}
+{% load core_tags  webp_converter %}
 {% block content %}
   {% load i18n static %}
   <section class="sec-padding">
