--- a/join/project/templates/project/detail.html
+++ b/join/project/templates/project/detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load thumbnail %}
+{% load thumbnail  webp_converter %}
 {% load core_tags %}
 {% load static i18n %}
 {% block content %}
