--- a/join/project/templates/project/list.html
+++ b/join/project/templates/project/list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load core_tags thumbnail %}
+{% load core_tags thumbnail webp_converter %}
 {% block content %}
   {% load i18n static %}
   <!--end header section -->
