--- a/join/home/templates/partials/slider.html
+++ b/join/home/templates/partials/slider.html
@@ -1,4 +1,4 @@
-{% load i18n static core_tags thumbnail %}
+{% load i18n static core_tags thumbnail webp_converter %}
 {% get_home_sliders as sliders %}
 {% if sliders.count %}
   <div id="rev_slider_104_1_wrapper" class="rev_slider_wrapper fullscreen-container" data-alias="scroll-effect76" style="background-color:#111111;padding:0px;">
