--- a/join/home/templates/partials/top_navbar.html
+++ b/join/home/templates/partials/top_navbar.html
@@ -1,10 +1,10 @@
-{% load i18n static core_tags %}
+{% load i18n static core_tags webp_converter %}
 <div class="col-md-12 nopadding">
   <div class="header-section white style1 links-dark pin-style">
     <div class="container">
       <div class="mod-menu">
         <div class="row">
-          <div class="col-sm-2"> <a class="logo style-2 mar-4" href="{% url "home_view" %}" title=""> <img alt="" src="{% static "images/logo/logo-join.png" %}  "/> </a> </div>
+          <div class="col-sm-2"> <a class="logo style-2 mar-4" href="{% url "home_view" %}" title=""> <img alt="" src="{% static_webp "images/logo/logo-join.png" %}  "/> </a> </div>
           <div class="col-sm-10">
             <div class="main-nav">
               <ul class="nav navbar-nav top-nav">
