--- a/join/home/templates/partials/participate.html
+++ b/join/home/templates/partials/participate.html
@@ -30,7 +30,7 @@
               <div class="divider-line solid light-2"></div>
               <br/>
               {% get_image_by_slug "celeste-moyano" as image_var %}
-              {% thumbnail image_var.file "100x100" crop="center" format="PNG" as im %}
+              {% thumbnail image_var.file "100x100" crop="center" format="WEBP" as im %}
                 <div class="imgbox-tiny round center overflow-hidden"><img alt="" class="img-responsive" src="{{ im.url }}"/></div>
               {% endthumbnail %}
               <h6 class="less-mar-1 title montserrat">Celeste Moyano</h6>
@@ -52,7 +52,7 @@
               <div class="divider-line solid light-2"></div>
               <br/>
               {% get_image_by_slug "florencia-bernuy" as image_var %}
-              {% thumbnail image_var.file "100x100" crop="center" format="PNG" as im %}
+              {% thumbnail image_var.file "100x100" crop="center" format="WEBP" as im %}
                 <div class="imgbox-tiny round center overflow-hidden"><img alt="" class="img-responsive" src="{{ im.url }}"/></div>
               {% endthumbnail %}
               <h6 class="less-mar-1 title montserrat">Florencia Bernuy</h6>
@@ -74,7 +74,7 @@
               <div class="divider-line solid light-2"></div>
               <br/>
               {% get_image_by_slug "ruben-perez" as image_var %}
-              {% thumbnail image_var.file "100x100" crop="center" format="PNG" as im %}
+              {% thumbnail image_var.file "100x100" crop="center" format="WEBP" as im %}
                 <div class="imgbox-tiny round center overflow-hidden"><img alt="" class="img-responsive" src="{{ im.url }}"/></div>
               {% endthumbnail %}
               <h6 class="less-mar-1 title montserrat">Rubén Pérez</h6>
