--- a/join/authentication/templates/users/list-users.html
+++ b/join/authentication/templates/users/list-users.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
-{% load core_tags thumbnail %}
+{% load core_tags thumbnail webp_converter %}
 {% block content %}
   {% load i18n static %}
   <section class="section-side-image clearfix">
     <div class="img-holder col-md-12 col-sm-12 col-xs-12">
-      <div class="background-imgholder" style="background: url({% static "images/users-background.png" %});"><img alt="" class="nodisplay-image" src="{% static "images/users-background.png" %}"> </img></div>
+      <div class="background-imgholder" style="background: url({% static "images/users-background.png" %});"><img alt="" class="nodisplay-image" src="{% static_webp "images/users-background.png" %}"> </img></div>
     </div>
     <div class="container-fluid">
       <div class="row">
