Webp for users background image in static folder

--- a/join/authentication/templates/users/list-users.html
+++ b/join/authentication/templates/users/list-users.html
@@ -4,7 +4,7 @@
   {% load i18n static %}
   <section class="section-side-image clearfix">
     <div class="img-holder col-md-12 col-sm-12 col-xs-12">
-      <div class="background-imgholder" style="background: url({% static_webp "images/users-background.png" %});"><img alt="" class="nodisplay-image" src="{% static_webp "images/users-background.png" %}"> </img></div>
+      <div class="background-imgholder" style="background: url({% static "images/users-background-min.webp" %});"><img alt="" class="nodisplay-image" src="{% static "images/users-background-min.webp" %}"> </img></div>
     </div>
     <div class="container-fluid">
       <div class="row">
